--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <h1 id="connectme" data-aos="fade-up" data-aos-duration="2000">Connect</h1>
         <div class="serviceforms" >
             <h3 style="border-bottom: solid 2px; display: inline-block;" data-aos="fade-up" data-aos-duration="2000">Work with me</h3>
-            <form name="work requests" action="https://public.herotofu.com/v1/beb4c710-5570-11ed-b82c-5d75eaa7ccff" method="post" style="border-bottom: solid 3pt aqua; padding-bottom:1em; ;" netlify data-aos="zoom-in" data-aos-duration="2000">
+            <form name="work requests" action="" method="post" style="border-bottom: solid 3pt aqua; padding-bottom:1em; ;" data-netlify="true" data-aos="zoom-in" data-aos-duration="2000">
                 <div class="form-group" style="margin-bottom: 1em; margin-top: 1em;">
                     <label for="" style="display:block; 
                                         margin-bottom: 0.5em;">Enter your name</label>
