submit button fixed

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     
                 </div>
                 
-                <input type="button" value="submit" style="margin:auto; display: flex; justify-content: center; margin-top: 2em; padding: 1em 2em 1em 2em ; cursor: pointer;">
+                <input type="submit" value="submit" style="margin:auto; display: flex; justify-content: center; margin-top: 2em; padding: 1em 2em 1em 2em ; cursor: pointer;">
 
             </form>
             <br>
