--- a/index.html
+++ b/index.html
@@ -244,11 +244,7 @@
         <h1 id="connectme" data-aos="fade-up" data-aos-duration="2000">Connect</h1>
         <div class="serviceforms" >
             <h3 style="border-bottom: solid 2px; display: inline-block;" data-aos="fade-up" data-aos-duration="2000">Work with me</h3>
-<<<<<<< HEAD
             <form name="work requests"  method="post" style="border-bottom: solid 3pt aqua; padding-bottom:1em; ;" netlify data-aos="zoom-in" data-aos-duration="2000">
-=======
-            <form name="work requests"  method="post" style="border-bottom: solid 3pt aqua; padding-bottom:1em; ;"  netlify  data-aos="zoom-in" data-aos-duration="2000">
->>>>>>> 338cc61999ed72bfbb1f0c0396b30423a91b81ea
                 <div class="form-group" style="margin-bottom: 1em; margin-top: 1em;">
                     <label for="" style="display:block; 
                                         margin-bottom: 0.5em;">Enter your name</label>
@@ -301,7 +297,7 @@
                     <label for="description" style="margin-top:1em;">Describe the nature of the project</label>
                     <div style="display:flex; gap:1em; margin-top: 0.5em;">
                         <textarea name="nature" id="" cols="30" rows="10" style="resize:none; padding: 1em; width: 50%;height: 4em; border-radius: 10px;"></textarea>
-                        <input type="file" name="description" id="">
+                        <input type="file" name="descriptive_image" id="">
 
                     </div>
                   
@@ -310,11 +306,11 @@
                 <div class="form-group" style="margin-top:1em;">
                     <label for="budget">what is your budget for this service ?</label>
                     <select name="budget" id="" style="margin-left:1em ; padding: 1em;">
-                        <option value="">select budget</option>
-                        <option value="">less than $1000</option>
-                        <option value="">between $1000 - $5000</option>
-                        <option value="">above $5000</option>
-                        <option value="">negotiate personally</option>
+                        <option value="didnt_select">select budget</option>
+                        <option value="less than 1000$">less than $1000</option>
+                        <option value="between 1000$ - $5000">between $1000 - $5000</option>
+                        <option value="above $5000">above $5000</option>
+                        <option value="negotiate">negotiate personally</option>
                     </select>
                     
                 </div>
